--- a/src/components/PaginationSelectionMenu/PaginationSelectionMenu.module.css
+++ b/src/components/PaginationSelectionMenu/PaginationSelectionMenu.module.css
@@ -9,3 +9,9 @@
         column-gap: 1rem;
     }
 }
+
+.active {
+    background-color: var(--contrast-color);
+    color: var(--main-color);
+    font-weight: bold;
+}
